--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,7 +31,7 @@ div.nav_item {
   float: left;
 }
 
-.label  {
+.label, .badge  {
   a, a:hover, a:focus {
     color: #fff;
     text-decoration: none;
@@ -40,5 +40,10 @@ div.nav_item {
 
 div.comment_votes {
   padding: 10px;
+}
+
+.nav_button{
+   display: inline-block;
+   margin-left: 5px;
 }
 
