--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,18 +2,16 @@
   <li>
     <%= link_to "Postit!", root_path, :class => 'brand' %>
   </li>
-  <li>
-    <%= link_to 'link', '' %>
-  </li>
 </ul>
 <div class="btn-group nav_item">
   <%= link_to '#', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown' do %>
     Categories <span class='caret'></span>
   <% end %>
-    <ul class='dropdown-menu'>
-      <% Category.all.each do |category| %>
-        <li><%= link_to category.name, category_path(category) %></li>
-      <% end %>
+  <ul class='dropdown-menu'>
+    <% Category.all.each do |category| %>
+      <li><%= link_to category.name, category_path(category) %></li>
+    <% end %>
+    <% if logged_in? %>
       <li class='divider'></li>
       <li>
         <%= link_to(new_category_path) do %>
@@ -21,8 +19,44 @@
           New category
         <% end %>
       </li>
+    <% end %>
+  </ul>
+</div>
+<% if logged_in? %>
+  <div class="btn-group nav_item">
+    <%= link_to '#', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown' do %>
+      <%= current_user.username %>
+      <span class="caret"></span>
+    <% end %>
+    <ul class="dropdown-menu">
+      <li>
+        <%= link_to edit_user_path(current_user) do %>
+          <i class="icon-pencil"></i>
+          edit profile
+        <% end %>
+      </li>
+      <li>
+        <%= link_to user_path(current_user) do %>
+          <i class="icon-user"></i>
+          view profile
+        <% end %>
+      </li>
+      <li>
+        <%= link_to logout_path do %>
+          <i class="icon-circle-arrow-left"></i>
+          logout
+        <% end %>
+      </li>
     </ul>
-</div>
-<div class="nav-item nav_button">
-  <%= link_to 'New post', new_post_path, class: 'btn btn-success btn-small' %>
-</div>
+  </div>
+  <div class="nav-item nav_button">
+    <%= link_to 'New post', new_post_path, class: 'btn btn-success btn-small' %>
+  </div>
+<% else %>
+  <div class="nav-item nav_button">
+    <%= link_to 'Register', register_path, class: 'btn btn-success btn-small' %>
+  </div>
+  <div class="nav-item nav_button">
+    <%= link_to 'Log in', login_path, class: 'btn btn-small' %>
+  </div>
+<% end %>
