cancel button added

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -9,5 +9,6 @@
       <%= f.text_field :name %>
     </div>
   <%= f.submit "Create category", class: 'btn btn-success' %>
+  <%= f.submit("Cancel", class: "btn btn-warning")%>
   <% end %>
 </div>
