--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,5 +10,6 @@
       <%= f.password_field :password %>
     </div>
     <%= f.submit (@user.new_record? ? "Register" : "Update profile"), class: "btn btn-success" %>
+    <%= f.submit("Cancel", class: "btn btn-warning")%>
   <% end %>
 </div>
